Fixed gallery photo stretching

--- a/root/frontend/src/pages/Gallery/Gallery.css
+++ b/root/frontend/src/pages/Gallery/Gallery.css
@@ -199,11 +199,13 @@
 .col-1-photo-1 img {
     width: 844px;
     height: 562px;
+    object-fit: cover;
 }
 
 .col-1-photo-2 img {
     width: 844px;
     height: 562px;
+    object-fit: cover;
 }
 
 .col-2-photo-group {
@@ -221,12 +223,14 @@
     margin-top: 0px;
     height: 650px;
     width: 40vw;
+    object-fit: cover;
 }
 
 .col-2-photo-2 img {
     margin-top: 0px;
     height: 650px;
     width: 61vw;
+    object-fit: cover;
 }
 
 .group-2-photos {
@@ -249,12 +253,14 @@
 .col-3-photo img {
     width: 814px;
     height: 492px;
+    object-fit: cover;
 }
 
 .col-4-photo img {
     width: 930px;
     height: 492px;
     padding-right: 110px;
+    object-fit: cover;
 }
 
 .swiper-row {
@@ -272,6 +278,7 @@
 .swiper-photo img {
     width: 1150px;
     height: 652px;
+    object-fit: contain;
 }
 
 .swiper-pagination-fraction {
